--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ listings:
   </div>
 
   <div class="row" id="listing-table">
-    <table id="listings" class="table table-striped table-responsive table-bordered centered tablesorter">
+    <table id="listings" class="table table-striped table-responsive table-bordered centered">
       <thead>
         <tr>
           <th class="location col-md-1">Name</th>
@@ -293,11 +293,3 @@ listings:
     </table>
   </div>
 </div>
-
-<script type="text/javasccript">
-  $(document).ready(function() 
-      { 
-          $("#listings").tablesorter(); 
-      } 
-  ); 
-</script>
