Added datatables library so tables can be sorted, searched.

--- a/index.html
+++ b/index.html
@@ -293,3 +293,15 @@ listings:
     </table>
   </div>
 </div>
+
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/s/dt/jq-2.1.4,dt-1.10.10/datatables.min.css"/>
+ 
+<script type="text/javascript" src="https://cdn.datatables.net/s/dt/jq-2.1.4,dt-1.10.10/datatables.min.js"></script>
+
+<script type-"text/javascript">
+  $(document).ready(function() { $('#listings').DataTable(
+    {
+      "iDisplayLength": 50,
+      "order": [[ 3, "desc" ]]
+    }); } );
+</script>
