Added locations in US and South America.

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ listings:
   rating: 4.5
   reviews: 23
   why: big house located in central Tokyo
-- name: Center of tokyo cozy &amps; large house
+- name: Center of tokyo cozy & large house
   url: https://www.airbnb.com/rooms/7689688?s=kYkY8bCM
   location: Yotsuya, Tokyo, Japan
   picture: https://a2.muscache.com/im/pictures/13e67bc2-5a53-4629-bf97-ea33b095987d.jpg
@@ -242,6 +242,236 @@ listings:
   rating: 4.5
   reviews: 28
   why: large house in central Kyoto
+- name: Lodge retreat in charming village
+  url: https://www.airbnb.com/rooms/2025602
+  location: Rio de Janeiro, Brazil
+  picture: https://a1.muscache.com/im/pictures/52913860/6ec0361e_original.jpg
+  bedrooms: 7
+  beds: 16
+  price: 147
+  rating: 4.5
+  reviews: 8
+  why: in 
+- name: Mansion Boero, 9 Bed in San Telmo
+  url: https://www.airbnb.com/rooms/1831935
+  location: Buenos Aires, Argentina
+  picture: https://a2.muscache.com/im/pictures/25669863/fc9c0804_original.jpg
+  bedrooms: 9
+  beds: 9
+  price: 300
+  rating: 4.5
+  reviews: 32
+  why: huge historic home in Buenos Aires, swimming pool, BBQ, rooftop terrace
+- name: Villa Family,Trogir,Dalmacija,Split
+  url: https://www.airbnb.com/rooms/4012916
+  location: Trogir, Split, Croatia
+  picture: https://a1.muscache.com/im/pictures/51592242/9be5db26_original.jpg
+  bedrooms: 7
+  beds: 12
+  price: 650
+  rating: 4.5
+  reviews: 4
+  why: beautiful villa with a pool on an island in the Adriatic Sea
+- name: Villa de la Vie
+  url: https://www.airbnb.com/rooms/7023137
+  location: Orasac, Dalmatia, Croatia
+  picture: https://a0.muscache.com/im/pictures/89050821/c7688876_original.jpg
+  bedrooms: 7
+  beds: 7
+  price: 612
+  rating: 5
+  reviews: 5
+  why: insanely beautiful villa with a pool on the Adriatic
+- name: POBLADO PENTHOUSE JACUZI SUV DRIVER
+  url: https://www.airbnb.com/rooms/6853407
+  location: Medellin, Colombia
+  picture: https://a2.muscache.com/im/pictures/2ef7410b-762a-4415-a62f-1a74876ba8e6.jpg
+  bedrooms: 7
+  beds: 12
+  price: 699
+  rating: 4.5
+  reviews: 5
+  why: 3-floor penthouse with private terrace and jacuzzi
+- name: 12 BEDROOM PENTHOUSE W PRIVATE POOL
+  url: https://www.airbnb.com/rooms/9880326
+  location: Medellin, Colombia
+  picture: https://a2.muscache.com/im/pictures/9156f1b9-3192-42a8-8403-a1594c318fab.jpg
+  bedrooms: 12
+  beds: 16
+  price: 999
+  rating: n/a
+  reviews: 0 <br>(host has good reviews for other properties)
+  why: huge penthouse with private pool, comes with maid / cook and laundry service
+- name: 10 bedroom villa and pool sleeps 25
+  url: https://www.airbnb.com/rooms/2982493
+  location: St Paul's Bay, Salini, Malta
+  picture: https://a1.muscache.com/im/pictures/40868553/f407eda3_original.jpg
+  bedrooms: 10
+  beds: 25
+  price: 677
+  rating: 5
+  reviews: 18
+  why: large villa with pool
+- name: Grande maison à la campagne
+  url: https://www.airbnb.com/rooms/4474623
+  location: Givry, Bourgogne, France
+  picture: https://a0.muscache.com/im/pictures/78974936/0c468b91_original.jpg
+  bedrooms: 12
+  beds: 16
+  price: 565
+  rating: 4.5
+  reviews: 3
+  why: large mansion about 2 hours from paris, includes 2 pianos 
+- name: large, exclusive historical villa
+  url: https://www.airbnb.com/rooms/3296518
+  location: San Marcello Pistoiese, Tuscany, Italy
+  picture: https://a0.muscache.com/im/pictures/67981141/86a82612_original.jpg
+  bedrooms: 11
+  beds: 16
+  price: 614
+  rating: 4.5
+  reviews: 6
+  why: huge historic mansion near florence, Mark Twain reportedly spent a year here in 1904
+- name: Vallorsaia, Private pool with view
+  url: https://www.airbnb.com/rooms/2468682
+  location: Sansepolcro, Tuscany, Italy
+  picture: https://a1.muscache.com/im/pictures/32707763/f3d1d61d_original.jpg
+  bedrooms: 10
+  beds: 16
+  price: 452
+  rating: 4.5
+  reviews: 3
+  why: large stone Tuscan farmhouse, surrounded by green hills, private pool 
+- name: Regency country house and estate
+  url: https://www.airbnb.com/rooms/4919535
+  location: Thetford, England, United Kingdom
+  picture: https://a1.muscache.com/im/pictures/61682838/39c64391_original.jpg
+  bedrooms: 16
+  beds: 16
+  price: 2296
+  rating: 5
+  reviews: 9
+  why: gigantic historic house in the countryside of England, pool, sauna, hot tub, etc.
+- name: Big Indian Log Home on the Esopus !
+  url: https://www.airbnb.com/rooms/3538335
+  location: Big Indian, NY, USA
+  picture: https://a0.muscache.com/im/pictures/44792816/7891c112_original.jpg
+  bedrooms: 8
+  beds: 14
+  price: 500
+  rating: 5
+  reviews: 38
+  why: large wooden retreat, 10 mins from ski area, 2.5 hours from NYC
+- name: Lakehouse on Private Lake w/ Pool
+  url: https://www.airbnb.com/rooms/2836117
+  location: Livingston Manor, NY, USA
+  picture: https://a0.muscache.com/im/pictures/110624952/b7c5f37d_original.jpg
+  bedrooms: 7
+  beds: 10
+  price: 860
+  rating: 5
+  reviews: 25
+  why: secluded area with lots of hiking and swimming
+- name: Lakehouse on Private Lake w/ Pool
+  url: https://www.airbnb.com/rooms/2836117
+  location: Livingston Manor, NY, USA
+  picture: https://a0.muscache.com/im/pictures/110624952/b7c5f37d_original.jpg
+  bedrooms: 7
+  beds: 10
+  price: 860
+  rating: 5
+  reviews: 25
+  why: secluded area with lots of hiking and swimming
+- name: 2 Penthouse Lofts & Private Terrace
+  url: https://www.airbnb.com/rooms/4580594
+  location: Brooklyn, NY, USA
+  picture: https://a0.muscache.com/im/pictures/80339600/e1312316_original.jpg
+  bedrooms: 7
+  beds: 9
+  price: 399
+  rating: 4.5
+  reviews: 32
+  why: awesome lofts in Williamsburg
+- name: Historic Mansion, Large & Imposing
+  url: https://www.airbnb.com/rooms/1576762
+  location: Washington, DC, USA
+  picture: https://a1.muscache.com/im/pictures/22937110/d40a50a3_original.jpg
+  bedrooms: 8
+  beds: 13
+  price: 1200
+  rating: 4.5
+  reviews: 13
+  why: large, beautiful house in downtown D.C.
+- name: Southwest Retreat
+  url: https://www.airbnb.com/rooms/4111958
+  location: Mount Carmel, UT, USA
+  picture: https://a1.muscache.com/im/pictures/22937110/d40a50a3_original.jpg
+  bedrooms: 7
+  beds: 16
+  price: 980
+  rating: 5
+  reviews: 3
+  why: huge house in the middle of nature
+- name: 14 bedroom/14 bath Mega Mansion
+  url: https://www.airbnb.com/rooms/6502082
+  location: South Lake Tahoe, CA, USA
+  picture: https://a0.muscache.com/im/pictures/99577264/fd7daf9d_original.jpg
+  bedrooms: 14
+  beds: 19
+  price: 3700
+  rating: 5
+  reviews: 3
+  why: gigantic mansion near Lake Tahoe with indoor pool and movie theater
+- name: HUGE Mountain Log Cabin
+  url: https://www.airbnb.com/rooms/4616004
+  location: South Lake Tahoe, CA, USA
+  picture: https://a2.muscache.com/im/pictures/111517741/91903a9d_original.jpg
+  bedrooms: 7
+  beds: 11
+  price: 700
+  rating: 5
+  reviews: 14
+  why: large, luxurious log cabin near Lake Tahoe with 2 hot tubs and theater
+- name: 10 Bedrooms! Amazing Value! POOL!
+  url: https://www.airbnb.com/rooms/3120507
+  location: Leavenworth, WA, USA
+  picture: https://a2.muscache.com/im/pictures/108626703/866c2dfd_original.jpg
+  bedrooms: 10
+  beds: 16
+  price: 899
+  rating: 5
+  reviews: 4
+  why: pool and large common areas
+- name: "HarborCreek Lodge: Book for Charity"
+  url: https://www.airbnb.com/rooms/245612
+  location: Gig Harbor, WA, USA
+  picture: https://a0.muscache.com/im/pictures/32279021/3e0652ca_original.jpg
+  bedrooms: 8
+  beds: 18
+  price: 1250
+  rating: 4.5
+  reviews: 5
+  why: pool and large common areas
+- name: Luxury Lakeside Home and Guest Res.
+  url: https://www.airbnb.com/rooms/2695669
+  location: Grapeview, WA, USA
+  picture: https://a1.muscache.com/im/pictures/35389101/77fa0ef3_original.jpg
+  bedrooms: 9
+  beds: 9
+  price: 475
+  rating: 4.5
+  reviews: 22
+  why: charming, affordable place right on the lake with large common areas
+- name: Historic Catskill Mountain House
+  url: https://www.airbnb.com/rooms/237077
+  location: Durham, NY, USA
+  picture: https://a2.muscache.com/im/pictures/14087008/07881470_original.jpg
+  bedrooms: 8
+  beds: 10
+  price: 650
+  rating: 5
+  reviews: 25
+  why: charming historic house in the middle of nature
 
 ---
 
@@ -302,6 +532,6 @@ listings:
   $(document).ready(function() { $('#listings').DataTable(
     {
       "iDisplayLength": 50,
-      "order": [[ 3, "desc" ]]
+      "order": [[ 2, "asc" ]]
     }); } );
 </script>
