Added tracking link to the main HP site. Updated description to be bullets instead of text. Took out the (+2 futons) in one of the listings to it sorts correctly.

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ listings:
   price: 357
   rating: 4.5
   reviews: 23
-  why: big house located in central Tokyo. note: # of beds includes 2 futons.
+  why: "big house located in central Tokyo. note: # of beds includes 2 futons."
 - name: Center of tokyo cozy & large house
   url: https://www.airbnb.com/rooms/7689688?s=kYkY8bCM
   location: Yotsuya, Tokyo, Japan
