Added tracking link to the main HP site. Updated description to be bullets instead of text. Took out the (+2 futons) in one of the listings to it sorts correctly.

--- a/index.html
+++ b/index.html
@@ -187,11 +187,11 @@ listings:
   location: Kagurazaka, Tokyo, Japan
   picture: https://a2.muscache.com/im/pictures/64958560/4a70eb85_original.jpg
   bedrooms: 7
-  beds: 5 (+2 futons)
+  beds: 7
   price: 357
   rating: 4.5
   reviews: 23
-  why: big house located in central Tokyo
+  why: big house located in central Tokyo. note: # of beds includes 2 futons.
 - name: Center of tokyo cozy & large house
   url: https://www.airbnb.com/rooms/7689688?s=kYkY8bCM
   location: Yotsuya, Tokyo, Japan
@@ -481,11 +481,14 @@ listings:
       <h3>
         Planning a retreat for your startup? You've come to the right place.
       </h3>
+      <ul>
+        <li>A curated list of awesome AirBnBs around the world with 6+ bedrooms.</li>
+        <li>All have ratings of at least 4.5/5 with 3 or more reviews.</li>
+        <li>Click on a column to sort, or search using the box at the top right.</li>
+        <li>Have a venue to contribute? <a href="http://github.com/caser/airbnbs-for-team-retreats">Fork the project on Github</a> and send us a pull request :)</li>
+      </ul>
       <p>
-        We discover a lot of awesome AirBnBs in our scouting for <a href="http://hackerparadise.org/">Hacker Paradise</a>, so as a side project, we decided to release the top ones publicly in an open, community-driven list. 
-      </p>
-      <p>
-        Check out the options below, and if you have a venue to contribute, <a href="http://github.com/caser/airbnbs-for-team-retreats">fork the project on Github</a> and send us a pull request :)
+        A side project by the <a href="http://www.hackerparadise.org/?utm_source=top-link&utm_medium=side-project&utm_campaign=airbnb-retreats">Hacker Paradise</a> team.
       </p>
     </div>
   </div>
