Updated text description.

--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@ listings:
       </h3>
       <ul>
         <li>A curated list of awesome AirBnBs around the world with 6+ bedrooms.</li>
-        <li>All have ratings of at least 4.5/5 with 3 or more reviews.</li>
+        <li>All listings are rated at least 4.5 / 5 with 3 or more reviews.</li>
         <li>Click on a column to sort, or search using the box at the top right.</li>
         <li>Have a venue to contribute? <a href="http://github.com/caser/airbnbs-for-team-retreats">Fork the project on Github</a> and send us a pull request :)</li>
       </ul>
